# mynk-db

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  file_to_be_read_from  flake.nix  hellobrowser  nvim-linux-x86_64.appimage  test-requests.sh
.cache/clangd/index/: main.c.22F0258DD80888E5.idx  parser.c.0CE3D82D066C7EAE.idx  parser.h.F19709FF907FD983.idx  router.c.0C8ACED7B826638B.idx  router.h.432EB0FB7611FBEB.idx  routes.c.A0748CB3D954403E.idx  routes.h.0B6726CF3B2F7359.idx
app/routers/: __init__.py  sync.py
include/: database.h  parser.h  router.h
output/: main
src/: app.py  database.c  example_routes.c  example_routes.h  main.c  parser.c  parser.h  router.c  router.h  routes.c
src/parser/: parser.c  parser.h
src/router/: router.c  router.h  routes.h
